--- a/project-bolt-sb1-yh5bcbmr (1) n/project/tsconfig.node.json
+++ b/project-bolt-sb1-yh5bcbmr (1) n/project/tsconfig.node.json
@@ -10,8 +10,10 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
 
+    /* Obligatoire pour projet composite */
+    "composite": true,
+    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
