--- a/project-bolt-sb1-yh5bcbmr (1) n/project/tsconfig.node.json
+++ b/project-bolt-sb1-yh5bcbmr (1) n/project/tsconfig.node.json
@@ -18,6 +18,8 @@
     "emitDeclarationOnly": true,
     "declaration": true,
 
+    "jsx": "react-jsx"
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
