--- a/project-bolt-sb1-yh5bcbmr (1) n/project/tsconfig.node.json
+++ b/project-bolt-sb1-yh5bcbmr (1) n/project/tsconfig.node.json
@@ -18,7 +18,7 @@
     "emitDeclarationOnly": true,
     "declaration": true,
 
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
